--- a/client/html/index.html
+++ b/client/html/index.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet"
         href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@latest/build/styles/base16/dracula.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+    <script defer src="https://umami.metaso.site/script.js"
+        data-website-id="68317f31-5684-4943-bb78-17bc68211921"></script>
     <script>
         const user_image = `<img src="/assets/img/user.png" alt="User Avatar">`;
         const gpt_image = `<img src="/assets/img/deepseek_logo.jpg" alt="GPT Avatar">`;
@@ -96,7 +97,7 @@
             <div class="stop_generating stop_generating-hidden">
                 <button id="cancelButton">
                     <span>Stop Generating</span>
-                    <i class="far fa-stop"></i>
+                    <i class="fas fa-ban"></i>
                 </button>
             </div>
             <div class="box" id="messages">
