--- a/client/html/index.html
+++ b/client/html/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <title>DeepSeek R1 Online: Free No Login</title>
     <meta name="description"
         content="DeepSeek-R1 Online offers a free, real-time AI assistant with no login required. Get instant help for coding, data analysis, learning, and more. Experience advanced AI support 24/7 without any sign-up.">
+    <link rel="canonical" href="https://deepseek-r1-online.com/chat/">
     <meta property="og:title" content="DeepSeek R1 Online: Free No Login">
-    <meta property="og:image" content="https://openai.com/content/images/2022/11/ChatGPT.jpg">
+    <meta property="og:image" content="/assets/img/deepseek_logo.jpg">
     <meta property="og:description"
         content="DeepSeek-R1 Online offers a free, real-time AI assistant with no login required. Get instant help for coding, data analysis, learning, and more. Experience advanced AI support 24/7 without any sign-up.">
-    <!-- <meta property="og:url" content="https://chat.acy.dev"> -->
+    <meta property="og:url" content="https://deepseek-r1-online.com/chat/">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
@@ -65,11 +68,17 @@
     <script src="/assets/js/highlight.min.js"></script>
     <script src="/assets/js/highlightjs-copy.min.js"></script>
     <script>window.conversation_id = `{{chat_id}}`</script>
-    <title>DeepSeek R1 Online: Free No Login</title>
+
 </head>
 
 <body>
     <div class="gradient"></div>
+    <header class="site-header">
+        <h1>
+            <span class="brand-name">DeepSeek-R1 Online Free</span>
+        </h1>
+        <h2 class="visually-hidden">Free AI Assistant with No Login Required</h2>
+    </header>
     <div class="row">
         <div class="box conversations">
             <div class="top">
@@ -84,13 +93,14 @@
                     <i class="fas fa-trash-can"></i>
                     <span>Clear Conversations</span>
                 </button>
-                <!-- <div class="info">
-                    <i class="far fa-circle-info"></i>
-                    <span class="convo-title">By: @xtekky<br>
-                        Version: 0.0.1-beta<br>
-                        Release: 2023-04-18<br>
+                <div class="info">
+                    <i class="far fa-lightbulb"></i>
+                    <span class="convo-title"><a href="https://x.com/howie6879" target="_blank">By: @howie6879</a><br>
+                        <a href="https://images-1252557999.file.myqcloud.com/uPic/ETIbMe.jpg" target="_blank">👉:
+                            老胡的储物柜</a><br>
+                        Release: 2025-02-16<br>
                     </span>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="conversation disable-scrollbars">
@@ -119,7 +129,7 @@
                 </div>
                 <div class="field">
                     <select name="model" id="model">
-                        <option value="deepseek/deepseek-r1/community">deepseek-r1</option>
+                        <option value="deepseek/deepseek-r1/community">deepseek-r1-671B</option>
                         <option value="
                             deepseek/deepseek-v3/community">
                             deepseek-v3</option>
