--- a/client/html/index.html
+++ b/client/html/index.html
@@ -129,10 +129,11 @@
                 </div>
                 <div class="field">
                     <select name="model" id="model">
-                        <option value="deepseek/deepseek-r1/community">deepseek-r1-671B</option>
+                        <option value="deepseek-r1">deepseek-r1-671B</option>
+                        <!-- <option value="deepseek/deepseek-r1/community">deepseek-r1-671B</option>
                         <option value="
                             deepseek/deepseek-v3/community">
-                            deepseek-v3</option>
+                            deepseek-v3</option> -->
                     </select>
                     <!-- <span class="about">Model</span> -->
                 </div>
